--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Syntax highlighting for Idealingua Legacy IDL/DML",
     "version": "0.0.3",
     "engines": {
-        "vscode": "^1.28.0"
+        "vscode": "*"
     },
     "categories": [
         "Programming Languages"
